# DuckLynx

./: .gitignore  COPYING  README.md
firmware/: .clang-tidy  CMakeLists.txt  README.md  armnative.cmake
firmware/src/: UART.c  UART.h  debug.c  debug.h  debugUART.c  debugUART.h  dma.c  dma.h  eeprom.c  eeprom.h  gpio.c  gpio.h  led.c  led.h  linkerconfig.ld  logo.c  logo.h  main.c  other.c  other.h  register.h  rhsp.c  rhsp.h  rhspUART.c  rhspUART.h  startup.c  sysctl.c  sysctl.h  uart.c
firmware/src/hardware/: adc.c  adc.h  eeprom.c  eeprom.h  encoder.c  encoder.h  gpio.c  gpio.h  led.c  led.h  motor.c  motor.h  register.h  sysctl.c  sysctl.h  timer.c  timer.h  uart.h
firmware/src/rhsp/: rhsp.c  rhsp.h  rhspUART.c  rhspUART.h
info/: RHSP.md  better lynx board.HEIC  info.md  logo.txt  underChip.HEIC
openocd configs/: ft2232hl.cfg  ftdi_launchpad.cfg  ftdi_lynx.cfg  launchpad_lynx.cfg  test.cfg
pcb/: 12v.kicad_sch  3v3.kicad_sch  5v.kicad_sch  5v_buck.kicad_sch  analog_in.kicad_sch  analog_in_connector.kicad_sch  android_header.kicad_sch  aux_curr_sense.kicad_sch  button.kicad_sch  debug_uart.kicad_sch  encoder.kicad_sch  fp-lib-table  gpio.kicad_sch  gpio_pin.kicad_sch  i2c.kicad_sch  i2c_connector.kicad_sch  imu.kicad_sch  led.kicad_sch  mcu.kicad_sch  motor.kicad_sch  motors.kicad_sch  pcb.kicad_pcb  pcb.kicad_prl  pcb.kicad_pro  pcb.kicad_sch  rs485.kicad_sch  servo.kicad_sch  sheets.json  spi.kicad_sch  sym-lib-table  usb.kicad_sch  vrefa_plus.kicad_sch  ~pcb.kicad_sch.lck
pcb/footprints/CPDV5/: 2025-06-04_17-24-57.bak  2025-06-04_17-24-57.kicad_sym
pcb/footprints/CPDV5/footprints.pretty/: SOT353_CPDV5_CIP-L.kicad_mod  SOT353_CPDV5_CIP-M.kicad_mod  SOT353_CPDV5_CIP.kicad_mod
pcb/footprints/PUSBM5V5X4_TL_115/: 2025-08-02_02-43-25.kicad_sym
pcb/footprints/PUSBM5V5X4_TL_115/footprints.pretty/: DFN1616-6_SOT1189-1_NEX-L.kicad_mod  DFN1616-6_SOT1189-1_NEX-M.kicad_mod  DFN1616-6_SOT1189-1_NEX.kicad_mod
pcb/footprints/ul_TM4C123GH6PGEI7/: 2025-05-26_15-40-16.kicad_sym
pcb/footprints/ul_TM4C123GH6PGEI7/footprints.pretty/: PGE0144A_L.kicad_mod  PGE0144A_M.kicad_mod  PGE0144A_N.kicad_mod
pcb/footprints/ul_TPS54527DDA/: 2025-05-26_01-55-08.bak  2025-05-26_01-55-08.kicad_sym
pcb/footprints/ul_TPS54527DDA/footprints.pretty/: DDA0008E-IPC_A.kicad_mod  DDA0008E-IPC_B.kicad_mod  DDA0008E-IPC_C.kicad_mod  DDA0008E-MFG.kicad_mod
pcb/footprints/ul_VNH5050A-E/: 2025-06-05_20-58-53.bak  2025-06-05_20-58-53.kicad_sym
pcb/footprints/ul_VNH5050A-E/footprints.pretty/: SOIC_050A-E_STM-L.kicad_mod  SOIC_050A-E_STM-M.kicad_mod  SOIC_050A-E_STM.kicad_mod
pcb/scripts/: component reference check.txt  referenceSearch.py  updatePCB.py
